# collision-severity-predictor

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
collision_severity_predictor/: __init__.py  dataset.py  features.py  plots.py
collision_severity_predictor/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Val.ipynb  best_model.pt  data_acquisition.ipynb  ds.ipynb  weather_merging.ipynb
reports/: cleaning_report.csv  evaluation_report.csv  features_summary.csv  merging_report.csv  merging_report.json  smote_comparison_results.csv  smote_results.csv  training_report.csv
src/: __init__.py  config.py  pipeline.py  utils.py
src/data/: __init__.py  cleaning.py  load_data.py  merging.py
src/features/: build_features.py
src/modeling/: class_balancing.py  eval.py  models.py  train.py
src/utils/: __init__.py  utils.py
src/visualization/: visualize.py
tests/: conftest.py  test_cleaning.py  test_features.py  test_merging.py
