[tool.poetry]
name = "collision-severity-predictor"
version = "0.0.1"
description = "this project aims to predict the severity of collisions in the UK"
authors = ["Team 3"]

package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
mlflow = "^3.11.1"
scikit-learn = "^1.4.0"
category-encoders = "^2.6.0"
plotly = "^5.0.0"
imbalanced-learn = "^0.12.0"
xgboost = "^2.0.0"
torch = "^2.0.0"
lightgbm = "^4.0.0"
catboost = "^1.2.0"
seaborn = "^0.13.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
ruff = "^0.4.0"

[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true